[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sapcommissions"
authors = [{ name = "Niels Perfors", email = "niels.perfors1987@gmail.com" }]
description = "Client for SAP Commissions"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["SAP Commissions", "Incentive Management"]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.0.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "setuptools>=61.0",
    "setuptools_scm>=6.2",
    "pre-commit==3.7.0",
    "ruff==0.3.5",
    "codespell==2.2.6",
    "yamllint==1.35.1",
    "pylint==3.1.0",
    "mypy==1.9.0",
    "coverage==7.4.4",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6",
    "aioresponses>=0.7.6",
]

[project.scripts]
sap = "sapcommissions.__main__:cli"

[project.urls]
Homepage = "https://github.com/niro1987/python-sapcommissions"
Repository = "https://github.com/niro1987/python-sapcommissions.git"
Issues = "https://github.com/niro1987/python-sapcommissions/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-data]
"sapcommissions" = ["py.typed"]

[tool.pylint.MAIN]
py-version = "3.11"
ignore = ["tests"]
load-plugins = ["pylint.extensions.code_style", "pylint.extensions.typing"]

[tool.pylint."MESSAGES CONTROL"]
disable = []
enable = ["use-symbolic-message-instead"]

[tool.pylint.REPORTS]
score = false

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.TYPING]
runtime-typing = false

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)25s:%(lineno)-4s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/test.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)25s:%(lineno)-4s %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff.lint]
select = [
    "B002",    # Python does not support the unary prefix increment
    "B007",    # Loop control variable {name} not used within loop body
    "B014",    # Exception handler with duplicate exception
    "B023",    # Function definition does not bind loop variable {name}
    "B026",    # Star-arg unpacking after a keyword argument is strongly discouraged
    "C",       # complexity
    "COM818",  # Trailing comma on bare tuple prohibited
    "D",       # docstrings
    "DTZ003",  # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004",  # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
    "E",       # pycodestyle
    "F",       # pyflakes/autoflake
    "G",       # flake8-logging-format
    "I",       # isort
    "ICN001",  # import concentions; {name} should be imported as {asname}
    "N804",    # First argument of a class method should be named cls
    "N805",    # First argument of a method should be named self
    "S307",    # No builtin eval() allowed
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "PLC",     # pylint
    "PLE",     # pylint
    "PLR",     # pylint
    "PLW",     # pylint
    "Q000",    # Double quotes found but single quotes preferred
    "RUF006",  # Store a reference to the return value of asyncio.create_task
    "S102",    # Use of exec detected
    "S103",    # bad-file-permissions
    "S108",    # hardcoded-temp-file
    "S306",    # suspicious-mktemp-usage
    "S307",    # suspicious-eval-usage
    "S313",    # suspicious-xmlc-element-tree-usage
    "S314",    # suspicious-xml-element-tree-usage
    "S315",    # suspicious-xml-expat-reader-usage
    "S316",    # suspicious-xml-expat-builder-usage
    "S317",    # suspicious-xml-sax-usage
    "S318",    # suspicious-xml-mini-dom-usage
    "S319",    # suspicious-xml-pull-dom-usage
    "S320",    # suspicious-xmle-tree-usage
    "S601",    # paramiko-call
    "S602",    # subprocess-popen-with-shell-equals-true
    "S604",    # call-with-shell-equals-true
    "S608",    # hardcoded-sql-expression
    "S609",    # unix-command-wildcard-injection
    "SIM105",  # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117",  # Merge with-statements that use the same scope
    "SIM118",  # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201",  # Use {left} != {right} instead of not {left} == {right}
    "SIM208",  # Use {expr} instead of not (not {expr})
    "SIM212",  # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300",  # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401",  # Use get from dict with default instead of an if block
    "T100",    # Trace found: {name} used
    "T20",     # flake8-print
    "TID251",  # Banned imports
    "TRY004",  # Prefer TypeError exception for invalid type
    "B904",    # Use raise from to specify exception cause
    "TRY302",  # Remove exception handler; error is immediately re-raised
    "UP",      # pyupgrade
    "W",       # pycodestyle
]
ignore = [
    "C901", # Function too complex
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "E501", # line too long
    "E731", # do not assign a lambda expression, use a def
    "D213", # Multi-line docstring summary should start at the second line

    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # Indentation contains tabs
    "E111",   # Indentation is not a multiple of four
    "E114",   # Indentation is not a multiple of four (comment)
    "E117",   # Over-indented for comment
    "D206",   # Docstring does not start with an uppercase letter
    "D300",   # Use """triple double quotes""" (found '''triple single quotes''')
    "Q000",   # Remove bad quotes
    "Q001",   # Remove bad quotes
    "Q002",   # Remove bad quotes
    "Q003",   # Remove bad quotes
    "COM812", # Missing trailing comma
    "COM819", # Missing trailing comma
    "ISC001", # Use a single space after the "#" in a comment
    "ISC002", # Use a single space after the "#" in a comment
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.isort]
known-first-party = ["sapcommissions"]
combine-as-imports = true
split-on-trailing-comma = true
